Fixed bug refering to the style of the scrollbar

--- a/app/scenes/Home/scenes/IdentityVerification/style.scss
+++ b/app/scenes/Home/scenes/IdentityVerification/style.scss
@@ -1,6 +1,3 @@
-iframe {
-    max-height: 728px !important;
-}
 #identityVerification {
     width: 100%;
 }
